# lingokeun-app

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/lingokeun/: ai_service.py  config.py  main.py  token_monitor.py  user_profile.py  vocabulary_db.py
